--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@axe-core/react": "^4.10.2",
     "cra-template-pwa": "2.0.0",
     "react": "^19.1.1",
+    "react-ace": "^14.0.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1"
+    "react-icons": "^5.5.0",
+    "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-tooltip": "^5.29.1",
+    "styled-components": "^6.1.19",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
