--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-tooltip": "^5.29.1",
     "styled-components": "^6.1.19",
+    "three": "^0.179.1",
+    "vanta": "^0.5.24",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
