improved project structure+tidied up livepreview

--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@axe-core/react": "^4.10.2",
     "@types/ace": "^0.0.52",
     "ace-builds": "^1.43.2",
+    "acorn": "^8.15.0",
     "cra-template-pwa": "2.0.0",
+    "eslint": "^8.57.1",
+    "esprima": "^4.0.1",
     "framer-motion": "^12.23.12",
+    "html-validator": "^6.0.1",
+    "html5-validator": "^1.2.1",
     "motion": "^12.23.12",
+    "pyright": "^1.1.403",
+    "python-shell": "^5.0.0",
     "react": "^19.1.1",
     "react-ace": "^14.0.1",
     "react-dom": "^19.1.1",
