--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ace": "^14.0.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-tooltip": "^5.29.1",
